--- a/Hemsida/Advanced.css
+++ b/Hemsida/Advanced.css
@@ -46,6 +46,19 @@
     font-size: 28px;
 }
 
+.Current
+{
+    color: black;
+    width: 200px;
+    height: 32px;
+    text-align: center;
+    text-decoration: underline;
+    text-shadow: 0px 1px 3px rgba(34,62,66,.25);
+    display: inline-block;
+    font-family: "BebasNeue";
+    font-size: 28px;
+}
+
 .menu
 {
     background: linear-gradient(45deg, rgba(255, 255, 255, 0.7) 0%,rgba(230, 255, 255, 0.7) 100%);
