--- a/Hemsida/Basics.css
+++ b/Hemsida/Basics.css
@@ -33,6 +33,45 @@
     z-index: -1;
 }
 
+#body 
+{
+    position: relative;
+}
+#body img 
+{
+    height: 300px;
+    width: 300px;
+    float: right;
+    margin: 20px; 20px;
+}
+
+#body p
+{
+    color: black;
+    text-shadow: 0px 1px 3px rgba(34,62,66,.25);
+    text-align: justify;
+    text-indent: 2em;
+    font-size: 16px;
+}
+
+.body
+{
+    margin-top: 2%;
+    margin-right: 0%;
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0.7) 0%,rgba(230, 255, 255, 0.7) 100%);
+	border-radius: 10px;
+    width: auto;
+	box-shadow: 0px 2px 4px rgba(34,62,66,.25);
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 1px;
+    padding: 20px 32px;
+    text-decoration: none;
+    text-align: left;
+    -webkit-transition: box-shadow 1s ease;
+	transition: box-shadow 1s ease;
+}
+
 .menuButton
 {
     color: black;
@@ -73,4 +112,31 @@
     text-align: center;
     -webkit-transition: box-shadow 1s ease;
 	transition: box-shadow 1s ease;
+}
+
+.footer 
+{
+    position: relative;
+    margin-top: 50px;
+    bottom: 0;
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0.7) 0%,rgba(230, 255, 255, 0.7) 100%);
+    text-align: center;
+    padding: 10px;
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+
+
+.testimg {
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px;  /* Rounded border */
+    padding: 5px; /* Some padding */
+    width: 150 px; /* Set a small width */
+}
+
+/* Add a hover effect (blue shadow) */
+img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    resize: 50%;
 }
