--- a/Hemsida/home.css
+++ b/Hemsida/home.css
@@ -59,6 +59,7 @@ h1
 	font-family: 'rustFont';
     font-size: 168px;
     text-shadow: 0px 2px 4px rgba(34,62,66,.75);
+    padding-top: 100px;
 }
 
 .menuButton
@@ -103,8 +104,6 @@ h1
     -webkit-transition: box-shadow 1s ease;
 	transition: box-shadow 1s ease;
 }
-
-
 
 .footerText
 {
